trying to add salat plugin to sbt-style build

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,10 +38,12 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
-# Evolutions
+# Plugins
 # ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
+# Disable plugins which are being replaced by salat:
+dbplugin = disabled
+evolutionplugin = disabled
+ehcacheplugin = disabled
 
 # Logger
 # ~~~~~
