added mongolab db

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,11 +32,11 @@ application.langs="en"
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+mongodb.default.db = "userpath"
+mongodb.default.host = "ds053688.mongolab.com"
+mongodb.default.port = 53688
+mongodb.default.user = "userpath"
+mongodb.default.password = "userpath"
 
 # Plugins
 # ~~~~~
