mongo works! scala also has options, nice!

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ mongodb.default.password = "userpath"
 
 # Plugins
 # ~~~~~
-# Disable plugins which are being replaced by salat:
+# Disable db plugins which are being replaced by salat:
 dbplugin = disabled
 evolutionplugin = disabled
 ehcacheplugin = disabled
